--- a/style/biere-1.css
+++ b/style/biere-1.css
@@ -6,6 +6,10 @@
     margin-left: 1em;
 }
 
+img {
+    filter: drop-shadow(0 0 0.75rem black);
+}
+
 .alignCenterTextFooter{
     text-align: center;
     padding-bottom: 1.5em;
