[BIERE-9] End page layout

--- a/style/biere-9.css
+++ b/style/biere-9.css
@@ -16,3 +16,34 @@ main {
 .button-container>.btn:first-of-type{
     margin-right: 10px;
 }
+
+.custom-table{
+    border-collapse: collapse;
+    border: 1px solid black;
+}
+
+table, th, td {
+    border: 1px solid black;
+}
+
+main{
+    padding: 5rem 10rem;
+}
+
+.custom-img{
+    width: 100px;
+}
+
+.custom-ul-decoration>li{
+    margin-left: 40px;
+    list-style: square !important;
+}
+
+.custom-ul-no-decoration>li{
+    margin-bottom: 10px;
+}
+
+* {
+    text-align: justify;
+}
+
