--- a/style/biere-6.css
+++ b/style/biere-6.css
@@ -14,7 +14,7 @@ body {
 }
 
 .beer-details {
-    margin-left: 2rem;
+    margin-left: 1rem;
 }
 
 .beer-comment {
@@ -23,6 +23,20 @@ body {
 
 .beer-description {
     padding-right: 5rem
+}
+
+.beer-description div {
+    margin-bottom: 1rem;
+    text-align: justify;
+}
+
+.beer-description p {
+   font-size: .9rem;
+    margin-top: .25rem;
+}
+
+.beer-description i {
+    font-size: .75rem;
 }
 
 .beer-navbar {
@@ -37,7 +51,7 @@ body {
 }
 
 .beer-buttons {
-    position: absolute;
+    position: fixed;
     left: 50%;
     bottom: 4rem;
     transform: translateX(-50%);
