transform header into nav

--- a/style/biere-2.css
+++ b/style/biere-2.css
@@ -2,9 +2,7 @@ img {
     width: 12%;
     display: inline-block;
 }
-
-
-header {
+nav {
     margin: 0;
     background-color: #882675;
     color: #ffffff;
